# Practice

Colab/: From_APIs_To_Agents.ipynb
ai-engineering-nexus/: .gitignore
ai-engineering-nexus/ai-chat/: main.py
ai-engineering-nexus/contract-engine/: learning_notes.md  llm_calls.py  main.py  models.py  pyproject.toml  robust_parser.py  test_bad_inputs.py  validator.py
ai-engineering-nexus/contract-engine/data/: agent_response.json  task_breakdown.json  tool_call.json
ai-engineering-nexus/contract-engine/mcp/: base_tool.py  client.py  registry.py  router.py  schemas.py  weather.py
ai-engineering-nexus/contract-engine/schemas/: agent_response.json  task_breakdown.json  tool_call.json
